--- a/BeachTime/package.json
+++ b/BeachTime/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
+    "downloadjs": "^1.4.7",
     "expo": "~36.0.0",
     "moment": "^2.24.0",
     "react": "~16.9.0",
@@ -23,7 +24,8 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.1.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
