--- a/BeachTime/app.json
+++ b/BeachTime/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Blank Template",
-    "slug": "BeachTime",
+    "name": "Beach Time",
+    "slug": "beach-time",
     "privacy": "public",
     "sdkVersion": "37.0.0",
     "platforms": [
@@ -11,7 +11,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/volley.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -25,12 +25,13 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.yourcompany.yourappname",
+      "bundleIdentifier": "com.pari.beachtime",
       "buildNumber": "1.0.0"
     },
     "android": {
-      "package": "com.yourcompany.yourappname",
-      "versionCode": 1
+      "package": "com.pari.beachtime",
+      "versionCode": 1,
+      "permissions" : []
     }
   }
 }
