--- a/BeachTime/package.json
+++ b/BeachTime/package.json
@@ -25,7 +25,8 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "^0.11.7",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "sentry-expo": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
