change version number

--- a/BeachTime/app.json
+++ b/BeachTime/app.json
@@ -9,7 +9,7 @@
       "android",
       "web"
     ],
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -30,11 +30,11 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.pari.beachtime",
-      "buildNumber": "1.0.0"
+      "buildNumber": "1.0.1"
     },
     "android": {
       "package": "com.pari.beachtime",
-      "versionCode": 1,
+      "versionCode": "1.0.1",
       "permissions": [],
       "googleServicesFile": "./google-services.json",
       "useNextNotificationsApi": true
