--- a/BeachTime/app.json
+++ b/BeachTime/app.json
@@ -34,7 +34,7 @@
     },
     "android": {
       "package": "com.pari.beachtime",
-      "versionCode": "1.0.1",
+      "versionCode": 2,
       "permissions": [],
       "googleServicesFile": "./google-services.json",
       "useNextNotificationsApi": true
