--- a/BeachTime/package.json
+++ b/BeachTime/package.json
@@ -11,11 +11,14 @@
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
     "downloadjs": "^1.4.7",
     "expo": "^38.0.0",
     "expo-notifications": "^0.7.2",
+    "expo-status-bar": "^1.0.0",
     "moment": "^2.24.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
@@ -23,6 +26,7 @@
     "react-native-dropdown": "^0.0.6",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
