--- a/BeachTime/package.json
+++ b/BeachTime/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/stack": "^5.1.0",
     "downloadjs": "^1.4.7",
     "expo": "^38.0.0",
-    "expo-notifications": "^0.7.2",
+    "expo-notifications": "~0.3.3",
     "expo-status-bar": "^1.0.0",
     "moment": "^2.24.0",
     "react": "16.11.0",
